--- a/index.html
+++ b/index.html
@@ -62,35 +62,19 @@
                     stroke-dasharray="0.5"
                   />
 
-                  <!-- Golfer Graphic (Enhanced Visibility) -->
-                  <g id="elm-golfer" transform="translate(0, 0)">
-                    <!-- Thicker lines for better visibility -->
-                    <!-- Legs -->
-                    <line x1="0" y1="0" x2="-0.3" y2="1.5" stroke="#1e293b" stroke-width="0.6" stroke-linecap="round"/>
-                    <line x1="0.6" y1="0" x2="0.9" y2="1.5" stroke="#1e293b" stroke-width="0.6" stroke-linecap="round"/>
-                    <!-- Body -->
-                    <line x1="0.3" y1="1.5" x2="0.3" y2="3.2" stroke="#1e293b" stroke-width="0.8" stroke-linecap="round"/>
-                    <!-- Head -->
-                    <circle cx="0.3" cy="3.6" r="0.7" fill="#fca5a5" />
-                    <!-- Cap -->
-                    <path d="M-0.3,3.8 Q0.3,4.3 0.9,3.8" fill="none" stroke="#fff" stroke-width="0.4" />
-                    <circle cx="0.3" cy="3.7" r="0.72" fill="none" stroke="#fff" stroke-width="0.15" />
-                    <!-- Arms -->
-                    <path d="M0.3,2.8 L-0.5,1.8" stroke="#1e293b" stroke-width="0.5" stroke-linecap="round"/>
-                    <!-- Club -->
-                    <line x1="-0.5" y1="1.8" x2="0.2" y2="0.2" stroke="#64748b" stroke-width="0.3" />
-                    <rect x="0.1" y="0.1" width="0.6" height="0.3" fill="#334155" transform="rotate(-45 0.2 0.2)" />
-                  </g>
+                  <!-- Golfer Graphic (Emoji) -->
+                  <!-- Positioned at x=-2, y=0.5 (slightly below line to look grounded) -->
+                  <text x="-2" y="0.5" font-size="6" text-anchor="middle" style="filter: drop-shadow(2px 2px 2px rgba(0,0,0,0.3));">🏌️‍♂️</text>
 
-                  <!-- The Object (Golf Ball) -->
+                  <!-- The Object (Golf Ball) - Increased Size -->
                   <circle 
                     id="elm-ball"
                     cx="0.5" 
                     cy="0.15" 
-                    r="0.15" 
+                    r="0.6" 
                     fill="white" 
                     stroke="#cbd5e1" 
-                    stroke-width="0.02" 
+                    stroke-width="0.05" 
                   />
                 </svg>
                 
