feat: Rename bounce to run and adjust physics
Replaces the "bounceLimit" parameter with "run" to represent ground friction. The physics simulation now uses the "run" parameter to adjust how much horizontal velocity is retained on impact, effectively controlling how far the object slides. The UI and quiz bonuses have been updated to reflect this change.

--- a/index.html
+++ b/index.html
@@ -131,14 +131,14 @@
                     </div>
                   </div>
 
-                  <!-- Bounce Display -->
+                  <!-- Run/Bounce Display (Renamed) -->
                   <div class="bg-slate-50 p-4 rounded-lg border border-slate-100">
                     <div class="flex justify-between items-center">
-                      <label class="text-xs font-bold text-slate-500 uppercase">Bounce</label>
-                      <span id="lbl-bounce" class="text-xl font-bold text-emerald-600 font-mono">5</span>
+                      <label class="text-xs font-bold text-slate-500 uppercase">Run (ラン)</label>
+                      <span id="lbl-run" class="text-xl font-bold text-emerald-600 font-mono">10</span>
                     </div>
                     <div class="w-full bg-slate-200 rounded-full h-1.5 mt-2">
-                       <div id="bar-bounce" class="bg-emerald-500 h-1.5 rounded-full" style="width: 20%"></div>
+                       <div id="bar-run" class="bg-emerald-500 h-1.5 rounded-full" style="width: 20%"></div>
                     </div>
                   </div>
 
@@ -222,8 +222,8 @@
                   <span id="bonus-power" class="font-bold text-lg">+0</span>
                 </div>
                 <div class="flex justify-between items-center border-b border-emerald-200 pb-2">
-                  <span>Bounce (ラン)</span> 
-                  <span id="bonus-bounce" class="font-bold text-lg">+0</span>
+                  <span>Run (ラン)</span> 
+                  <span id="bonus-run" class="font-bold text-lg">+0</span>
                 </div>
                 <div class="flex justify-between items-center">
                   <span>Wind (風読み)</span> 
