--- a/index.html
+++ b/index.html
@@ -131,14 +131,14 @@
                     </div>
                   </div>
 
-                  <!-- Run/Bounce Display (Renamed) -->
+                  <!-- Loft Display (Replaced Run) -->
                   <div class="bg-slate-50 p-4 rounded-lg border border-slate-100">
                     <div class="flex justify-between items-center">
-                      <label class="text-xs font-bold text-slate-500 uppercase">Run (ラン)</label>
-                      <span id="lbl-run" class="text-xl font-bold text-emerald-600 font-mono">10</span>
+                      <label class="text-xs font-bold text-slate-500 uppercase">Loft (弾道)</label>
+                      <span id="lbl-loft" class="text-xl font-bold text-emerald-600 font-mono">45°</span>
                     </div>
                     <div class="w-full bg-slate-200 rounded-full h-1.5 mt-2">
-                       <div id="bar-run" class="bg-emerald-500 h-1.5 rounded-full" style="width: 20%"></div>
+                       <div id="bar-loft" class="bg-emerald-500 h-1.5 rounded-full" style="width: 50%"></div>
                     </div>
                   </div>
 
@@ -222,8 +222,8 @@
                   <span id="bonus-power" class="font-bold text-lg">+0</span>
                 </div>
                 <div class="flex justify-between items-center border-b border-emerald-200 pb-2">
-                  <span>Run (ラン)</span> 
-                  <span id="bonus-run" class="font-bold text-lg">+0</span>
+                  <span>Loft (弾道)</span> 
+                  <span id="bonus-loft" class="font-bold text-lg">+0°</span>
                 </div>
                 <div class="flex justify-between items-center">
                   <span>Wind (風読み)</span> 
