refactor: Extract game reset logic
The logic for resetting the game state and UI was duplicated in `handleRestart` and `transitionToGame`. This change extracts the common reset logic into a new `resetGame` function, making the code more maintainable and reducing redundancy.

Additionally, the Tailwind CSS script loading order has been adjusted in `index.html` to ensure configuration is applied before the script itself is executed.

--- a/index.html
+++ b/index.html
@@ -4,19 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Info-I Master & Physics Game</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Configure Tailwind BEFORE loading the script -->
     <script>
-      tailwind.config = {
-        darkMode: 'class',
-        theme: {
-          extend: {
-            fontFamily: {
-              sans: ['Helvetica Neue', 'Arial', 'Hiragino Kaku Gothic ProN', 'Hiragino Sans', 'Meiryo', 'sans-serif'],
+      tailwind = {
+        config: {
+          darkMode: 'class',
+          theme: {
+            extend: {
+              fontFamily: {
+                sans: ['Helvetica Neue', 'Arial', 'Hiragino Kaku Gothic ProN', 'Hiragino Sans', 'Meiryo', 'sans-serif'],
+              }
             }
           }
         }
       }
     </script>
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body class="bg-slate-50 dark:bg-slate-900 min-h-screen text-slate-900 dark:text-slate-100 font-sans selection:bg-emerald-500 overflow-hidden relative transition-colors duration-500">
